wip: import watching account, translations

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -381,7 +381,6 @@
   "vote": "Гласувайте",
   "vote_casting": "Гласуване",
   "warning": "Внимание",
-  "watch_burst_account": "Наблюдавайте акаунта",
   "wrong_pin": "Грешен ПИН",
   "yes": "Да",
   "you": "Вие",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Акаунтът(ите) са премахнати успешно",
   "no_public_key_title": "Внимание! - Този акаунт не притежава публичен ключ!",
   "not_registered_title": "Този акаунт не е регистриран в блокчейна",
-  "not_registered_warning": "Този акаунт все още няма транзакции. Ако възнамерявате да използвате този акаунт за изпращане и/или получаване, препоръчително е да го активирате сега."
+  "not_registered_warning": "Този акаунт все още няма транзакции. Ако възнамерявате да използвате този акаунт за изпращане и/или получаване, препоръчително е да го активирате сега.",
+  "load_all_transactions": "Зареди всички",
+  "load_all_transactions_hint": "Зареждането на всички транзакции в крайна сметка причинява много заявки с високо използване на честотната лента. В зависимост от вашата и интернет връзката на възлите и броя на транзакциите това действие може да отнеме известно време. След като бъдат извлечени, транзакциите се кешират локално. Наистина ли искате да заредите всички транзакции? (Ограничението за извличане е ограничено до 10K транзакции)",
+  "manage_accounts": "Управление на акаунти",
+  "recipient_public_key": "Публичен ключ на получателя",
+  "recipient_public_key_invalid": "Адресът/идентификационният номер на получателя не съответства на даден публичен ключ",
+  "recipient_public_key_valid": "Адрес/ID на получателя и публичен ключ съвпадат",
+  "recipient_validation_hint_burn": "Сумата ще бъде изгорена",
+  "recipient_validation_hint_invalid": "Моля, проверете адреса на получателя, преди да изпратите.",
+  "recipient_validation_hint_not_verified": "Адресът не е потвърден.",
+  "recipient_validation_hint_unstoppable_out": "Не може да се извлече от Unstoppable Domains API. Моля, опитайте отново по-късно.",
+  "recipient_validation_hint_verified": "Адресът бе потвърден успешно.",
+  "enter_recipient_public_key": "Въведете публичния ключ на получателя.",
+  "enter_recipient_public_key_hint": "Акаунтът на получателя не е безопасен, така че прехвърляне без публичния ключ на получателя не е разрешено.",
+  "confirm": "Потвърдете",
+  "select_account": "Изберете"
 }
