--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -381,7 +381,6 @@
   "vote": "Hlasování",
   "vote_casting": "Hlasování",
   "warning": "Varování",
-  "watch_burst_account": "Sledujte účet",
   "wrong_pin": "Chybný PIN",
   "yes": "Ano",
   "you": "Vy",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Účty byly úspěšně odstraněny",
   "no_public_key_title": "Varování! - Tento účet nevlastní veřejný klíč!",
   "not_registered_title": "Tento účet není registrován v blockchainu",
-  "not_registered_warning": "Tento účet zatím nemá žádné transakce. Pokud máte v úmyslu používat tento účet pro odesílání a/nebo přijímání, doporučujeme nyní tento účet aktivovat."
+  "not_registered_warning": "Tento účet zatím nemá žádné transakce. Pokud máte v úmyslu používat tento účet pro odesílání a/nebo přijímání, doporučujeme nyní tento účet aktivovat.",
+  "load_all_transactions": "Načíst vše",
+  "load_all_transactions_hint": "Načítání všech transakcí nakonec způsobí mnoho požadavků s velkým využitím šířky pásma. V závislosti na vašem a uzlu připojení k internetu a počtu transakcí může tato akce nějakou dobu trvat. Po načtení jsou transakce lokálně ukládány do mezipaměti. Opravdu chcete načíst všechny transakce? (Limit načítání je omezen na 10 tisíc transakcí)",
+  "manage_accounts": "Spravovat účty",
+  "recipient_public_key": "Veřejný klíč příjemce",
+  "recipient_public_key_invalid": "Adresa/ID příjemce neodpovídá danému veřejnému klíči",
+  "recipient_public_key_valid": "Adresa příjemce/ID a veřejný klíč se shodují",
+  "recipient_validation_hint_burn": "Částka bude spálena",
+  "recipient_validation_hint_invalid": "Před odesláním prosím ověřte adresu příjemce.",
+  "recipient_validation_hint_not_verified": "Adresa nebyla ověřena.",
+  "recipient_validation_hint_unstoppable_out": "Nelze načíst z rozhraní Unstoppable Domains API. Prosím zkuste to znovu později.",
+  "recipient_validation_hint_verified": "Adresa byla úspěšně ověřena.",
+  "enter_recipient_public_key": "Zadejte veřejný klíč příjemce.",
+  "enter_recipient_public_key_hint": "Účet příjemce není bezpečný, takže převod bez veřejného klíče příjemce není povolen.",
+  "confirm": "Potvrdit",
+  "select_account": "Vybrat"
 }
