--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -10,7 +10,7 @@
   "account_import_short": "Konto importieren",
   "account_info": "Kontoinformation",
   "account_watch": "Importiere ein Konto, das Du nur beobachten möchtest",
-  "account_watch_short": "Konto ansehen",
+  "account_watch_short": "Konto beobachten",
   "accounts": "Konten",
   "actions": "Aktionen",
   "activate": "Schützen",
@@ -381,7 +381,6 @@
   "vote": "Abstimmung",
   "vote_casting": "Stimmenabgabe",
   "warning": "Warnung",
-  "watch_burst_account": "Konto beobachten",
   "wrong_pin": "Falsche Pin",
   "yes": "Ja",
   "you": "Du",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Konto oder Konten erfolgreich entfernt",
   "no_public_key_title": "Warnung! - Dieses Konto besitzt keinen öffentlichen Schlüssel!",
   "not_registered_title": "Dieses Konto ist nicht in der Blockchain registriert",
-  "not_registered_warning": "Dieses Konto hat noch keine Transaktionen. Wenn Sie beabsichtigen, dieses Konto zum Senden und/oder Empfangen zu verwenden, wird empfohlen, dieses Konto jetzt zu aktivieren."
+  "not_registered_warning": "Dieses Konto hat noch keine Transaktionen. Wenn Sie beabsichtigen, dieses Konto zum Senden und/oder Empfangen zu verwenden, wird empfohlen, dieses Konto jetzt zu aktivieren.",
+  "load_all_transactions_hint": "Das Laden aller Transaktionen verursacht viele Anfragen mit hoher Bandbreitennutzung. Abhängig von Ihrer und der Internetverbindung des Knotens und der Anzahl der Transaktionen kann dieser Vorgang einige Zeit dauern. Nach dem Abrufen werden die Transaktionen lokal zwischengespeichert. Möchten Sie wirklich alle Transaktionen laden? (Das Abruflimit ist auf 10.000 Transaktionen begrenzt.)",
+  "load_all_transactions": "Alle laden",
+  "manage_accounts": "Konten verwalten",
+  "recipient_public_key": "Öffentlicher Schlüssel des Empfängers",
+  "recipient_public_key_invalid": "Empfängeradresse/-ID stimmt nicht mit dem angegebenen öffentlichen Schlüssel überein",
+  "recipient_public_key_valid": "Empfängeradresse/ID und öffentlicher Schlüssel stimmen überein",
+  "recipient_validation_hint_burn": "Der Betrag wird verbrannt",
+  "recipient_validation_hint_invalid": "Bitte überprüfen Sie die Empfängeradresse vor dem Senden.",
+  "recipient_validation_hint_not_verified": "Adresse wurde nicht bestätigt.",
+  "recipient_validation_hint_unstoppable_out": "Abrufen von der Unstoppable Domains API nicht möglich. Bitte versuchen Sie es später erneut.",
+  "recipient_validation_hint_verified": "Adresse wurde erfolgreich bestätigt.",
+  "enter_recipient_public_key": "Geben Sie den öffentlichen Schlüssel des Empfängers ein.",
+  "enter_recipient_public_key_hint": "Das Konto des Empfängers ist unsicher, daher ist eine Übertragung ohne den öffentlichen Schlüssel des Empfängers nicht zulässig.",
+  "confirm": "Bestätigen",
+  "select_account": "Auswählen"
 }
