--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -381,7 +381,6 @@
   "vote": "Ψήφος",
   "vote_casting": "Ψηφοφορία",
   "warning": "Προειδοποίηση",
-  "watch_burst_account": "Παρατηρήστε λογαριασμό",
   "wrong_pin": "Λάθος PIN",
   "yes": "Ναί",
   "you": "Εσείς",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Οι λογαριασμοί καταργήθηκαν με επιτυχία",
   "no_public_key_title": "Προειδοποίηση! - Αυτός ο λογαριασμός δεν διαθέτει δημόσιο κλειδί!",
   "not_registered_title": "Αυτός ο λογαριασμός δεν είναι εγγεγραμμένος στο blockchain",
-  "not_registered_warning": "Αυτός ο λογαριασμός δεν έχει ακόμη συναλλαγές. Εάν σκοπεύετε να χρησιμοποιήσετε αυτόν τον λογαριασμό για αποστολή και/ή λήψη, συνιστάται να ενεργοποιήσετε αυτόν τον λογαριασμό τώρα."
+  "not_registered_warning": "Αυτός ο λογαριασμός δεν έχει ακόμη συναλλαγές. Εάν σκοπεύετε να χρησιμοποιήσετε αυτόν τον λογαριασμό για αποστολή και/ή λήψη, συνιστάται να ενεργοποιήσετε αυτόν τον λογαριασμό τώρα.",
+  "load_all_transactions": "Φόρτωση όλων",
+  "load_all_transactions_hint": "Η φόρτωση όλων των συναλλαγών προκαλεί τελικά πολλά αιτήματα με χρήση υψηλού εύρους ζώνης. Ανάλογα με τη δική σας και τους κόμβους σύνδεση στο διαδίκτυο και τον αριθμό των συναλλαγών, αυτή η ενέργεια μπορεί να διαρκέσει κάποιο χρόνο. Μετά την ανάκτηση, οι συναλλαγές αποθηκεύονται στην κρυφή μνήμη τοπικά. Θέλετε πραγματικά να φορτώσετε όλες τις συναλλαγές; (Το όριο ανάκτησης περιορίζεται σε 10 χιλιάδες συναλλαγές)",
+  "manage_accounts": "Διαχείριση λογαριασμών",
+  "recipient_public_key": "Δημόσιο κλειδί παραλήπτη",
+  "recipient_public_key_invalid": "Η διεύθυνση/το αναγνωριστικό παραλήπτη δεν ταιριάζει με το δεδομένο δημόσιο κλειδί",
+  "recipient_public_key_valid": "Διεύθυνση/Αναγνωριστικό παραλήπτη και αντιστοίχιση δημόσιου κλειδιού",
+  "recipient_validation_hint_burn": "Το ποσό θα καεί",
+  "recipient_validation_hint_invalid": "Επαληθεύστε τη διεύθυνση των παραληπτών πριν την αποστολή.",
+  "recipient_validation_hint_not_verified": "Η διεύθυνση δεν έχει επαληθευτεί.",
+  "recipient_validation_hint_unstoppable_out": "Δεν είναι δυνατή η ανάκτηση από το Unstoppable Domains API. Παρακαλώ προσπάθησε ξανά αργότερα.",
+  "recipient_validation_hint_verified": "Η διεύθυνση επαληθεύτηκε με επιτυχία.",
+  "enter_recipient_public_key": "Εισαγάγετε το δημόσιο κλειδί του παραλήπτη.",
+  "enter_recipient_public_key_hint": "Ο λογαριασμός του παραλήπτη δεν είναι ασφαλής, επομένως δεν επιτρέπεται η μεταφορά χωρίς το δημόσιο κλειδί του παραλήπτη.",
+  "confirm": "Επιβεβαιώνω",
+  "select_account": "Επιλέγω"
 }
