--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -381,7 +381,6 @@
   "vote": "Votar",
   "vote_casting": "Transmisión de votos",
   "warning": "Advertencia",
-  "watch_burst_account": "Observar cuenta",
   "wrong_pin": "Pin erróneo",
   "yes": "sí",
   "you": "Tú",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Cuenta(s) eliminada(s) con éxito",
   "no_public_key_title": "¡Advertencia! - ¡Esta cuenta no posee una clave pública!",
   "not_registered_title": "Esta cuenta no está registrada en la cadena de bloques.",
-  "not_registered_warning": "Esta cuenta aún no tiene transacciones. Si tiene la intención de utilizar esta cuenta para enviar y/o recibir, se recomienda activar esta cuenta ahora."
+  "not_registered_warning": "Esta cuenta aún no tiene transacciones. Si tiene la intención de utilizar esta cuenta para enviar y/o recibir, se recomienda activar esta cuenta ahora.",
+  "load_all_transactions": "Cargar todo",
+  "load_all_transactions_hint": "La carga de todas las transacciones eventualmente genera muchas solicitudes con un alto uso de ancho de banda. Dependiendo de su conexión a Internet y de los nodos y la cantidad de transacciones, esta acción puede llevar algún tiempo. Una vez obtenidas, las transacciones se almacenan en caché localmente. ¿Realmente desea cargar todas las transacciones? (El límite de obtención está limitado a 10 000 transacciones)",
+  "manage_accounts": "Cuentas de administración",
+  "recipient_public_key": "Clave pública del destinatario",
+  "recipient_public_key_invalid": "La dirección/identificación del destinatario no coincide con la clave pública dada",
+  "recipient_public_key_valid": "Identificación/dirección del destinatario y coincidencia de clave pública",
+  "recipient_validation_hint_burn": "La cantidad será quemada",
+  "recipient_validation_hint_invalid": "Verifique la dirección de los destinatarios antes de enviar.",
+  "recipient_validation_hint_not_verified": "La dirección no ha sido verificada.",
+  "recipient_validation_hint_unstoppable_out": "No se puede obtener de la API de dominios imparables. Por favor, inténtelo de nuevo más tarde.",
+  "recipient_validation_hint_verified": "La dirección fue verificada con éxito.",
+  "enter_recipient_public_key": "Introduzca la clave pública del destinatario.",
+  "enter_recipient_public_key_hint": "La cuenta del destinatario no es segura, por lo que no se permite una transferencia sin la clave pública del destinatario.",
+  "confirm": "Confirmar",
+  "select_account": "Seleccione"
 }
