--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -381,7 +381,6 @@
   "vote": "Äänestys",
   "vote_casting": "Äänestys",
   "warning": "Varoitus",
-  "watch_burst_account": "Tarkkaile tiliä",
   "wrong_pin": "Väärä PIN-koodi",
   "yes": "Joo",
   "you": "Sinä",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Tilit poistettu onnistuneesti",
   "no_public_key_title": "Varoitus! - Tämä tili ei omista julkista avainta!",
   "not_registered_title": "Tätä tiliä ei ole rekisteröity lohkoketjuun",
-  "not_registered_warning": "Tällä tilillä ei ole vielä tapahtumia. Jos aiot käyttää tätä tiliä lähettämiseen ja/tai vastaanottamiseen, on suositeltavaa aktivoida tämä tili nyt."
+  "not_registered_warning": "Tällä tilillä ei ole vielä tapahtumia. Jos aiot käyttää tätä tiliä lähettämiseen ja/tai vastaanottamiseen, on suositeltavaa aktivoida tämä tili nyt.",
+  "load_all_transactions": "Lataa kaikki",
+  "load_all_transactions_hint": "Kaikkien tapahtumien lataaminen aiheuttaa lopulta paljon pyyntöjä suurella kaistanleveyden käytöllä. Riippuen sinun ja solmujen Internet-yhteydestä ja tapahtumien määrästä tämä toiminto voi kestää jonkin aikaa. Kun tapahtumat on haettu, ne tallennetaan välimuistiin paikallisesti. Haluatko todella ladata kaikki tapahtumat? (Hakuraja on 10 000 tapahtumaa)",
+  "manage_accounts": "Hallinnoi tilejä",
+  "recipient_public_key": "Vastaanottajan julkinen avain",
+  "recipient_public_key_invalid": "Vastaanottajan osoite/tunnus ei vastaa annettua julkista avainta",
+  "recipient_public_key_valid": "Vastaanottajan osoite/tunnus ja julkinen avain täsmäävät",
+  "recipient_validation_hint_burn": "Summa poltetaan",
+  "recipient_validation_hint_invalid": "Tarkista vastaanottajan osoite ennen lähettämistä.",
+  "recipient_validation_hint_not_verified": "Osoitetta ei ole vahvistettu.",
+  "recipient_validation_hint_unstoppable_out": "Ei voida noutaa Unstoppable Domains API:sta. Yritä uudelleen myöhemmin.",
+  "recipient_validation_hint_verified": "Osoite vahvistettiin onnistuneesti.",
+  "enter_recipient_public_key": "Syötä vastaanottajan julkinen avain.",
+  "enter_recipient_public_key_hint": "Vastaanottajan tili ei ole turvallinen, joten siirtoa ilman vastaanottajan julkista avainta ei sallita.",
+  "confirm": "Vahvistaa",
+  "select_account": "Valitse"
 }
