--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -381,7 +381,6 @@
   "vote": "Vote",
   "vote_casting": "Vote",
   "warning": "Avertissement",
-  "watch_burst_account": "Observer le compte",
   "wrong_pin": "NIP erroné",
   "yes": "Oui",
   "you": "Toi",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Compte(s) supprimé(s) avec succès",
   "no_public_key_title": "Avertissement! - Ce compte ne possède pas de clé publique !",
   "not_registered_title": "Ce compte n'est pas enregistré dans la blockchain",
-  "not_registered_warning": "Ce compte n'a pas encore de transactions. Si vous avez l'intention d'utiliser ce compte pour envoyer et/ou recevoir, il est recommandé d'activer ce compte maintenant."
+  "not_registered_warning": "Ce compte n'a pas encore de transactions. Si vous avez l'intention d'utiliser ce compte pour envoyer et/ou recevoir, il est recommandé d'activer ce compte maintenant.",
+  "load_all_transactions": "Charger tout",
+  "load_all_transactions_hint": "Le chargement de toutes les transactions entraîne finalement de nombreuses requêtes avec une utilisation élevée de la bande passante. En fonction de la vôtre et de la connexion Internet des nœuds et du nombre de transactions, cette action peut prendre un certain temps. Une fois récupérées, les transactions sont mises en cache localement. Voulez-vous vraiment charger toutes les transactions ? (La limite de récupération est limitée à 10 000 transactions)",
+  "manage_accounts": "Gérer les comptes",
+  "recipient_public_key": "Clé publique du destinataire",
+  "recipient_public_key_invalid": "L'adresse/l'identifiant du destinataire ne correspond pas à la clé publique donnée",
+  "recipient_public_key_valid": "Correspondance entre l'adresse/l'identifiant du destinataire et la clé publique",
+  "recipient_validation_hint_burn": "Le montant sera brûlé",
+  "recipient_validation_hint_invalid": "Veuillez vérifier l'adresse des destinataires avant l'envoi.",
+  "recipient_validation_hint_not_verified": "L'adresse n'a pas été vérifiée.",
+  "recipient_validation_hint_unstoppable_out": "Impossible de récupérer à partir de l'API Unstoppable Domains. Veuillez réessayer plus tard.",
+  "recipient_validation_hint_verified": "L'adresse a été vérifiée avec succès.",
+  "enter_recipient_public_key": "Entrez la clé publique du destinataire.",
+  "enter_recipient_public_key_hint": "Le compte du destinataire n'est pas sécurisé, donc un transfert sans la clé publique du destinataire n'est pas autorisé.",
+  "confirm": "Confirmer",
+  "select_account": "Sélectionner"
 }
