--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -381,7 +381,6 @@
   "vote": "वोट",
   "vote_casting": "वोट कास्टिंग",
   "warning": "चेतावनी",
-  "watch_burst_account": "खाते का निरीक्षण करें",
   "wrong_pin": "गलत पिन",
   "yes": "हाँ",
   "you": "आप",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "खाता (खाते) सफलतापूर्वक निकाले गए",
   "no_public_key_title": "चेतावनी! - इस खाते के पास कोई सार्वजनिक कुंजी नहीं है!",
   "not_registered_title": "यह खाता ब्लॉकचेन में पंजीकृत नहीं है",
-  "not_registered_warning": "इस खाते में अभी तक कोई लेन-देन नहीं हुआ है। यदि आप भेजने और/या प्राप्त करने के लिए इस खाते का उपयोग करने का इरादा रखते हैं, तो इस खाते को अभी सक्रिय करने की अनुशंसा की जाती है।"
+  "not_registered_warning": "इस खाते में अभी तक कोई लेन-देन नहीं हुआ है। यदि आप भेजने और/या प्राप्त करने के लिए इस खाते का उपयोग करने का इरादा रखते हैं, तो इस खाते को अभी सक्रिय करने की अनुशंसा की जाती है।",
+  "load_all_transactions": "सभी लोड करें",
+  "load_all_transactions_hint": "सभी लेन-देन लोड करने से अंततः उच्च बैंडविड्थ उपयोग के साथ बहुत सारे अनुरोध होते हैं। आपके और नोड्स के इंटरनेट कनेक्शन और लेन-देन की संख्या के आधार पर इस कार्रवाई में कुछ समय लग सकता है। प्राप्त करने के बाद, लेनदेन स्थानीय रूप से कैश किए जाते हैं। क्या आप वाकई सभी लेन-देन लोड करना चाहते हैं? (लाने की सीमा 10K लेन-देन तक सीमित है)",
+  "manage_accounts": "खातों का प्रबंधन",
+  "recipient_public_key": "प्राप्तकर्ता सार्वजनिक कुंजी",
+  "recipient_public_key_invalid": "प्राप्तकर्ता का पता/आईडी दी गई सार्वजनिक कुंजी से मेल नहीं खाता",
+  "recipient_public_key_valid": "प्राप्तकर्ता का पता/आईडी और सार्वजनिक कुंजी मिलान",
+  "recipient_validation_hint_burn": "राशि जल जाएगी",
+  "recipient_validation_hint_invalid": "कृपया भेजने से पहले प्राप्तकर्ता का पता सत्यापित करें।",
+  "recipient_validation_hint_not_verified": "पता सत्यापित नहीं किया गया है।",
+  "recipient_validation_hint_unstoppable_out": "अजेय डोमेन एपीआई से प्राप्त करने में असमर्थ। बाद में पुन: प्रयास करें।",
+  "recipient_validation_hint_verified": "पता सफलतापूर्वक सत्यापित किया गया था।",
+  "enter_recipient_public_key": "प्राप्तकर्ता की सार्वजनिक कुंजी दर्ज करें।",
+  "enter_recipient_public_key_hint": "प्राप्तकर्ता का खाता असुरक्षित है, इसलिए प्राप्तकर्ता की सार्वजनिक कुंजी के बिना स्थानांतरण की अनुमति नहीं है।",
+  "confirm": "पुष्टि करें",
+  "select_account": "चुनना"
 }
