--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -381,7 +381,6 @@
   "vote": "Glasanje",
   "vote_casting": "Lijevanje glasova",
   "warning": "Upozorenje",
-  "watch_burst_account": "Promatrajte račun",
   "wrong_pin": "Pogrešan PIN",
   "yes": "Da",
   "you": "Vas",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Računi su uspješno uklonjeni",
   "no_public_key_title": "Upozorenje! - Ovaj račun ne posjeduje javni ključ!",
   "not_registered_title": "Ovaj račun nije registriran u blockchainu",
-  "not_registered_warning": "Ovaj račun još nema transakcija. Ako namjeravate koristiti ovaj račun za slanje i/ili primanje, preporučuje se da sada aktivirate ovaj račun."
+  "not_registered_warning": "Ovaj račun još nema transakcija. Ako namjeravate koristiti ovaj račun za slanje i/ili primanje, preporučuje se da sada aktivirate ovaj račun.",
+  "load_all_transactions": "Učitaj sve",
+  "load_all_transactions_hint": "Učitavanje svih transakcija na kraju uzrokuje mnogo zahtjeva s velikom upotrebom propusnosti. Ovisno o vašoj internetskoj vezi i vezi čvorova te broju transakcija, ova radnja može potrajati neko vrijeme. Nakon dohvaćanja, transakcije se lokalno predmemoriraju. Želite li stvarno učitati sve transakcije? (Ograničenje dohvaćanja ograničeno je na 10 tisuća transakcija)",
+  "manage_accounts": "Upravljanje računima",
+  "recipient_public_key": "Javni ključ primatelja",
+  "recipient_public_key_invalid": "Adresa/ID primatelja ne odgovara danom javnom ključu",
+  "recipient_public_key_valid": "Adresa/ID primatelja i javni ključ odgovaraju",
+  "recipient_validation_hint_burn": "Količina će biti spaljena",
+  "recipient_validation_hint_invalid": "Prije slanja provjerite adresu primatelja.",
+  "recipient_validation_hint_not_verified": "Adresa nije potvrđena.",
+  "recipient_validation_hint_unstoppable_out": "Nije moguće dohvatiti s API-ja Unstoppable Domains. Molimo pokušajte ponovo kasnije.",
+  "recipient_validation_hint_verified": "Adresa je uspješno potvrđena.",
+  "enter_recipient_public_key": "Unesite javni ključ primatelja.",
+  "enter_recipient_public_key_hint": "Račun primatelja je nesiguran, stoga prijenos bez javnog ključa primatelja nije dopušten.",
+  "confirm": "Potvrdi",
+  "select_account": "Odaberi"
 }
