--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -381,7 +381,6 @@
   "vote": "Pilih",
   "vote_casting": "Pemungutan Suara",
   "warning": "Peringatan",
-  "watch_burst_account": "Perhatikan Akun",
   "wrong_pin": "PIN salah",
   "yes": "Iya",
   "you": "Kamu",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Akun berhasil dihapus",
   "no_public_key_title": "Peringatan! - Akun ini tidak memiliki kunci publik!",
   "not_registered_title": "Akun ini tidak terdaftar di blockchain",
-  "not_registered_warning": "Akun ini belum ada transaksi. Jika Anda bermaksud menggunakan akun ini untuk mengirim dan/atau menerima, disarankan untuk mengaktifkan akun ini sekarang."
+  "not_registered_warning": "Akun ini belum ada transaksi. Jika Anda bermaksud menggunakan akun ini untuk mengirim dan/atau menerima, disarankan untuk mengaktifkan akun ini sekarang.",
+  "load_all_transactions": "Muat Semua",
+  "load_all_transactions_hint": "Loading semua transaksi akhirnya menimbulkan banyak permintaan dengan penggunaan bandwidth yang tinggi. Bergantung pada koneksi internet Anda dan node serta jumlah transaksi, tindakan ini dapat memakan waktu lama. Setelah diambil, transaksi di-cache secara lokal. Apakah Anda benar-benar ingin memuat semua transaksi? (Batas pengambilan dibatasi hingga 10 ribu transaksi)",
+  "manage_accounts": "Mengelola akun",
+  "recipient_public_key": "Kunci Publik Penerima",
+  "recipient_public_key_invalid": "Alamat/Id Penerima tidak cocok dengan kunci publik yang diberikan",
+  "recipient_public_key_valid": "Kecocokan Alamat/Id Penerima dan kunci publik",
+  "recipient_validation_hint_burn": "Jumlahnya akan hangus",
+  "recipient_validation_hint_invalid": "Harap verifikasi alamat penerima sebelum mengirim.",
+  "recipient_validation_hint_not_verified": "Alamat belum diverifikasi.",
+  "recipient_validation_hint_unstoppable_out": "Tidak dapat mengambil dari Unstoppable Domains API. Coba lagi nanti.",
+  "recipient_validation_hint_verified": "Alamat berhasil diverifikasi.",
+  "enter_recipient_public_key": "Masukkan kunci publik penerima.",
+  "enter_recipient_public_key_hint": "Akun penerima tidak aman, sehingga transfer tanpa kunci publik penerima tidak diperbolehkan.",
+  "confirm": "Mengonfirmasi",
+  "select_account": "Pilih"
 }
