--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -381,7 +381,6 @@
   "vote": "Votazione",
   "vote_casting": "Vota Casting",
   "warning": "avvertimento",
-  "watch_burst_account": "Osserva conto",
   "wrong_pin": "PIN errato",
   "yes": "sì",
   "you": "voi",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Account rimossi con successo",
   "no_public_key_title": "Avvertimento! - Questo account non possiede una chiave pubblica!",
   "not_registered_title": "Questo account non è registrato nella blockchain",
-  "not_registered_warning": "Questo account non ha ancora transazioni. Se intendi utilizzare questo account per l'invio e/o la ricezione, ti consigliamo di attivarlo ora."
+  "not_registered_warning": "Questo account non ha ancora transazioni. Se intendi utilizzare questo account per l'invio e/o la ricezione, ti consigliamo di attivarlo ora.",
+  "load_all_transactions": "Carica tutto",
+  "load_all_transactions_hint": "Il caricamento di tutte le transazioni alla fine causa molte richieste con un elevato utilizzo della larghezza di banda. A seconda della connessione Internet tua e dei nodi e del numero di transazioni, questa azione può richiedere del tempo. Una volta recuperate, le transazioni vengono memorizzate nella cache locale. Vuoi davvero caricare tutte le transazioni? (Il limite di recupero è limitato a 10.000 transazioni)",
+  "manage_accounts": "Gestisci account",
+  "recipient_public_key": "Chiave pubblica del destinatario",
+  "recipient_public_key_invalid": "L'indirizzo/ID del destinatario non corrisponde alla chiave pubblica specificata",
+  "recipient_public_key_valid": "Indirizzo/ID del destinatario e corrispondenza della chiave pubblica",
+  "recipient_validation_hint_burn": "L'importo verrà bruciato",
+  "recipient_validation_hint_invalid": "Si prega di verificare l'indirizzo del destinatario prima dell'invio.",
+  "recipient_validation_hint_not_verified": "L'indirizzo non è stato verificato.",
+  "recipient_validation_hint_unstoppable_out": "Impossibile recuperare dall'API Unstoppable Domains. Per favore riprova più tardi.",
+  "recipient_validation_hint_verified": "L'indirizzo è stato verificato con successo.",
+  "enter_recipient_public_key": "Inserisci la chiave pubblica del destinatario.",
+  "enter_recipient_public_key_hint": "L'account del destinatario non è sicuro, quindi non è consentito un trasferimento senza la chiave pubblica del destinatario.",
+  "confirm": "Confermare",
+  "select_account": "Selezionare"
 }
