--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -381,7 +381,6 @@
   "vote": "投票",
   "vote_casting": "投票キャスティング",
   "warning": "警告",
-  "watch_burst_account": "アカウントを監視",
   "wrong_pin": "間違った PIN",
   "yes": "はい",
   "you": "君は",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "アカウントが正常に削除されました",
   "no_public_key_title": "警告！ - このアカウントは公開鍵を所有していません!",
   "not_registered_title": "このアカウントはブロックチェーンに登録されていません",
-  "not_registered_warning": "このアカウントにはまだ取引がありません。このアカウントを送受信に使用する場合は、今すぐこのアカウントを有効にすることをお勧めします。"
+  "not_registered_warning": "このアカウントにはまだ取引がありません。このアカウントを送受信に使用する場合は、今すぐこのアカウントを有効にすることをお勧めします。",
+  "load_all_transactions": "すべてロード",
+  "load_all_transactions_hint": "すべてのトランザクションをロードすると、最終的に帯域幅の使用量が多い多くのリクエストが発生します。あなたとノードのインターネット接続とトランザクションの数によっては、このアクションに時間がかかる場合があります。フェッチされると、トランザクションはローカルにキャッシュされます。本当にすべてのトランザクションをロードしますか? (フェッチ制限は 10K トランザクションに制限されています)",
+  "manage_accounts": "アカウントの管理",
+  "recipient_public_key": "受信者の公開鍵",
+  "recipient_public_key_invalid": "受信者のアドレス/ID が指定された公開鍵と一致しません",
+  "recipient_public_key_valid": "受信者アドレス/ID と公開鍵が一致",
+  "recipient_validation_hint_burn": "量は燃やします",
+  "recipient_validation_hint_invalid": "送信する前に受信者のアドレスを確認してください。",
+  "recipient_validation_hint_not_verified": "住所は確認されていません。",
+  "recipient_validation_hint_unstoppable_out": "Unstoppable Domains API からフェッチできません。後でもう一度やり直してください。",
+  "recipient_validation_hint_verified": "住所が正常に確認されました。",
+  "enter_recipient_public_key": "受信者の公開鍵を入力します。",
+  "enter_recipient_public_key_hint": "受取人のアカウントは安全でないため、受取人の公開鍵なしでの送金は許可されていません。",
+  "confirm": "確認",
+  "select_account": "選択する"
 }
