--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -381,7 +381,6 @@
   "vote": "Balsas",
   "vote_casting": "Balsavimo perdavimas",
   "warning": "Įspėjimas",
-  "watch_burst_account": "Stebėti sąskaitą",
   "wrong_pin": "Neteisingas PIN kodas",
   "yes": "Taip",
   "you": "Tu",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Paskyra (-os) sėkmingai pašalinta (-os).",
   "no_public_key_title": "Įspėjimas! – Šiai paskyrai viešasis raktas nepriklauso!",
   "not_registered_title": "Ši paskyra nėra užregistruota blokų grandinėje",
-  "not_registered_warning": "Šioje paskyroje dar nėra operacijų. Jei ketinate naudoti šią paskyrą siuntimui ir (arba) gavimui, rekomenduojama šią paskyrą suaktyvinti dabar."
+  "not_registered_warning": "Šioje paskyroje dar nėra operacijų. Jei ketinate naudoti šią paskyrą siuntimui ir (arba) gavimui, rekomenduojama šią paskyrą suaktyvinti dabar.",
+  "load_all_transactions": "Įkelti viską",
+  "load_all_transactions_hint": "Visų operacijų įkėlimas galiausiai sukelia daug užklausų naudojant didelį pralaidumą. Priklausomai nuo jūsų ir mazgų interneto ryšio bei operacijų skaičiaus, šis veiksmas gali užtrukti. Gavus operacijos, jos išsaugomos vietos talpykloje. Ar tikrai norite įkelti visas operacijas? (Gavimo limitas yra 10 tūkst. operacijų)",
+  "manage_accounts": "Tvarkyti paskyras",
+  "recipient_public_key": "Gavėjo viešasis raktas",
+  "recipient_public_key_invalid": "Gavėjo adresas / ID neatitinka nurodyto viešojo rakto",
+  "recipient_public_key_valid": "Gavėjo adresas / ID ir viešasis raktas sutampa",
+  "recipient_validation_hint_burn": "Suma bus sudeginta",
+  "recipient_validation_hint_invalid": "Prieš siųsdami patikrinkite gavėjo adresą.",
+  "recipient_validation_hint_not_verified": "Adresas nepatvirtintas.",
+  "recipient_validation_hint_unstoppable_out": "Nepavyko gauti iš Unstoppable Domains API. Pabandykite dar kartą vėliau.",
+  "recipient_validation_hint_verified": "Adresas sėkmingai patvirtintas.",
+  "enter_recipient_public_key": "Įveskite gavėjo viešąjį raktą.",
+  "enter_recipient_public_key_hint": "Gavėjo paskyra nesaugi, todėl pervedimas be gavėjo viešojo rakto neleidžiamas.",
+  "confirm": "Patvirtinti",
+  "select_account": "Pasirinkite"
 }
