--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -381,7 +381,6 @@
   "vote": "Stemmen",
   "vote_casting": "Stem uitbrengen",
   "warning": "Waarschuwing",
-  "watch_burst_account": "Bekijk account",
   "wrong_pin": "Verkeerde pincode",
   "yes": "Ja",
   "you": "U",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Account(s) succesvol verwijderd",
   "no_public_key_title": "Waarschuwing! - Dit account heeft geen openbare sleutel!",
   "not_registered_title": "Dit account is niet geregistreerd in de blockchain",
-  "not_registered_warning": "Dit account heeft nog geen transacties. Als u van plan bent dit account te gebruiken voor verzenden en/of ontvangen, is het raadzaam om dit account nu te activeren."
+  "not_registered_warning": "Dit account heeft nog geen transacties. Als u van plan bent dit account te gebruiken voor verzenden en/of ontvangen, is het raadzaam om dit account nu te activeren.",
+  "load_all_transactions": "Alles laden",
+  "load_all_transactions_hint": "Het laden van alle transacties veroorzaakt uiteindelijk veel verzoeken met een hoog bandbreedtegebruik. Afhankelijk van de internetverbinding van jou en de nodes en het aantal transacties kan deze actie enige tijd duren. Eenmaal opgehaald, worden de transacties lokaal in de cache opgeslagen. Wilt u echt alle transacties laden? (Ophaallimiet is beperkt tot 10.000 transacties)",
+  "manage_accounts": "Accounts beheren",
+  "recipient_public_key": "Openbare sleutel van ontvanger",
+  "recipient_public_key_invalid": "Adres/ID van ontvanger komt niet overeen met gegeven openbare sleutel",
+  "recipient_public_key_valid": "Adres/ID van ontvanger en openbare sleutel komen overeen",
+  "recipient_validation_hint_burn": "Het bedrag wordt verbrand",
+  "recipient_validation_hint_invalid": "Controleer het adres van de ontvanger voordat u het verzendt.",
+  "recipient_validation_hint_not_verified": "Adres is niet geverifieerd.",
+  "recipient_validation_hint_unstoppable_out": "Kan niet ophalen van de Unstoppable Domains API. Probeer het later opnieuw.",
+  "recipient_validation_hint_verified": "Adres is succesvol geverifieerd.",
+  "enter_recipient_public_key": "Voer de openbare sleutel van de ontvanger in.",
+  "enter_recipient_public_key_hint": "Het account van de ontvanger is onveilig, dus een overdracht zonder de openbare sleutel van de ontvanger is niet toegestaan.",
+  "confirm": "Bevestigen",
+  "select_account": "Selecteer"
 }
