--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -381,7 +381,6 @@
   "vote": "Voto",
   "vote_casting": "Elenco de votos",
   "warning": "Aviso",
-  "watch_burst_account": "Observar conta",
   "wrong_pin": "PIN errado",
   "yes": "sim",
   "you": "Vocês",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Conta(s) removida(s) com sucesso",
   "no_public_key_title": "Aviso! - Esta conta não possui uma chave pública!",
   "not_registered_title": "Esta conta não está registrada no blockchain",
-  "not_registered_warning": "Esta conta ainda não tem transações. Se você pretende usar esta conta para enviar e/ou receber, é recomendável ativá-la agora."
+  "not_registered_warning": "Esta conta ainda não tem transações. Se você pretende usar esta conta para enviar e/ou receber, é recomendável ativá-la agora.",
+  "load_all_transactions": "Carregar tudo",
+  "load_all_transactions_hint": "O carregamento de todas as transações eventualmente causa muitas solicitações com alto uso de largura de banda. Dependendo da sua conexão com a Internet e do nódulo e do número de transações, essa ação pode levar algum tempo. Depois de buscadas, as transações são armazenadas em cache localmente. Você realmente deseja carregar todas as transações? (O limite de busca é limitado a 10 mil transações)",
+  "manage_accounts": "Gerenciar contas",
+  "recipient_public_key": "Chave pública do destinatário",
+  "recipient_public_key_invalid": "O endereço/ID do destinatário não corresponde à chave pública fornecida",
+  "recipient_public_key_valid": "Endereço/Id do destinatário e correspondência de chave pública",
+  "recipient_validation_hint_burn": "A quantia será queimada",
+  "recipient_validation_hint_invalid": "Verifique o endereço do destinatário antes de enviar.",
+  "recipient_validation_hint_not_verified": "O endereço não foi verificado.",
+  "recipient_validation_hint_unstoppable_out": "Não foi possível buscar na API Unstoppable Domains. Por favor, tente novamente mais tarde.",
+  "recipient_validation_hint_verified": "O endereço foi verificado com sucesso.",
+  "enter_recipient_public_key": "Insira a chave pública do destinatário.",
+  "enter_recipient_public_key_hint": "A conta do destinatário não é segura, portanto, uma transferência sem a chave pública do destinatário não é permitida.",
+  "confirm": "confirme",
+  "select_account": "Selecione"
 }
