--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -381,7 +381,6 @@
   "vote": "Vot",
   "vote_casting": "Distribuirea votului",
   "warning": "Avertizare",
-  "watch_burst_account": "Respectați contul",
   "wrong_pin": "Cod PIN greșit",
   "yes": "da",
   "you": "Tu",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Conturile au fost eliminate cu succes",
   "no_public_key_title": "Avertizare! - Acest cont nu deține o cheie publică!",
   "not_registered_title": "Acest cont nu este înregistrat în blockchain",
-  "not_registered_warning": "Acest cont nu are încă tranzacții. Dacă intenționați să utilizați acest cont pentru trimitere și/sau primire, este recomandat să activați acest cont acum."
+  "not_registered_warning": "Acest cont nu are încă tranzacții. Dacă intenționați să utilizați acest cont pentru trimitere și/sau primire, este recomandat să activați acest cont acum.",
+  "load_all_transactions": "Încărcați tot",
+  "load_all_transactions_hint": "Încărcarea tuturor tranzacțiilor provoacă în cele din urmă o mulțime de solicitări cu o utilizare mare a lățimii de bandă. În funcție de conexiunea la internet a ta și a nodurilor și de numărul de tranzacții, această acțiune poate dura ceva timp. Odată preluate, tranzacțiile sunt stocate în cache local. Chiar doriți să încărcați toate tranzacțiile? (Limita de preluare este limitată la 10.000 tranzacții)",
+  "manage_accounts": "Gestionați Conturile",
+  "recipient_public_key": "Cheia publică a destinatarului",
+  "recipient_public_key_invalid": "Adresa/Idul destinatarului nu se potrivește cu cheia publică dată",
+  "recipient_public_key_valid": "Adresa/ID-ul destinatarului și cheia publică se potrivesc",
+  "recipient_validation_hint_burn": "Suma va fi arsă",
+  "recipient_validation_hint_invalid": "Vă rugăm să verificați adresa destinatarilor înainte de a trimite.",
+  "recipient_validation_hint_not_verified": "Adresa nu a fost verificată.",
+  "recipient_validation_hint_unstoppable_out": "Imposibil de preluat din API-ul Unstoppable Domains. Vă rugăm să încercați din nou mai târziu.",
+  "recipient_validation_hint_verified": "Adresa a fost verificată cu succes.",
+  "enter_recipient_public_key": "Introduceți cheia publică a destinatarului.",
+  "enter_recipient_public_key_hint": "Contul destinatarului este nesigur, așa că nu este permis un transfer fără cheia publică a destinatarului.",
+  "confirm": "A confirma",
+  "select_account": "Selectați"
 }
