--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -381,7 +381,6 @@
   "vote": "Голосование",
   "vote_casting": "Голосование",
   "warning": "Предупреждение",
-  "watch_burst_account": "Добавить учетную запись в наблюдение",
   "wrong_pin": "Неверный PIN-код",
   "yes": "да",
   "you": "Вы",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Аккаунты успешно удалены",
   "no_public_key_title": "Предупреждение! - У этой учетной записи нет открытого ключа!",
   "not_registered_title": "Этот аккаунт не зарегистрирован в блокчейне",
-  "not_registered_warning": "В этом аккаунте еще нет транзакций. Если вы собираетесь использовать эту учетную запись для отправки и/или получения, рекомендуется активировать эту учетную запись сейчас."
+  "not_registered_warning": "В этом аккаунте еще нет транзакций. Если вы собираетесь использовать эту учетную запись для отправки и/или получения, рекомендуется активировать эту учетную запись сейчас.",
+  "load_all_transactions": "Загрузить все",
+  "load_all_transactions_hint": "Загрузка всех транзакций в конечном итоге приводит к большому количеству запросов с высокой пропускной способностью. В зависимости от вашего интернет-соединения и интернет-соединения узлов, а также количества транзакций, это действие может занять некоторое время. После получения транзакции кэшируются локально. Вы действительно хотите загрузить все транзакции? (Ограничение получения ограничено транзакциями 10K)",
+  "manage_accounts": "Управление учетными записями",
+  "recipient_public_key": "Открытый ключ получателя",
+  "recipient_public_key_invalid": "Адрес/идентификатор получателя не соответствует данному открытому ключу",
+  "recipient_public_key_valid": "Адрес/идентификатор получателя и открытый ключ совпадают",
+  "recipient_validation_hint_burn": "Сумма будет сожжена",
+  "recipient_validation_hint_invalid": "Перед отправкой проверьте адрес получателя.",
+  "recipient_validation_hint_not_verified": "Адрес не подтвержден.",
+  "recipient_validation_hint_unstoppable_out": "Не удалось получить данные из API Unstoppable Domains. Пожалуйста, повторите попытку позже.",
+  "recipient_validation_hint_verified": "Адрес успешно проверен.",
+  "enter_recipient_public_key": "Введите открытый ключ получателя.",
+  "enter_recipient_public_key_hint": "Учетная запись получателя небезопасна, поэтому перевод без открытого ключа получателя не допускается.",
+  "confirm": "Подтверждать",
+  "select_account": "Выбирать"
 }
