--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -381,7 +381,6 @@
   "vote": "Hlasujte",
   "vote_casting": "Hlasovanie",
   "warning": "Pozor",
-  "watch_burst_account": "Sledujte účet",
   "wrong_pin": "Chybný PIN",
   "yes": "Áno",
   "you": "Vy",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Účty boli úspešne odstránené",
   "no_public_key_title": "POZOR! - Tento účet nevlastní verejný kľúč!",
   "not_registered_title": "Tento účet nie je zaregistrovaný v blockchaine",
-  "not_registered_warning": "Tento účet zatiaľ neobsahuje žiadne transakcie. Ak máte v úmysle použiť tento účet na odosielanie a/alebo prijímanie, odporúčame vám teraz tento účet aktivovať."
+  "not_registered_warning": "Tento účet zatiaľ neobsahuje žiadne transakcie. Ak máte v úmysle použiť tento účet na odosielanie a/alebo prijímanie, odporúčame vám teraz tento účet aktivovať.",
+  "load_all_transactions": "Načítať všetko",
+  "load_all_transactions_hint": "Načítanie všetkých transakcií nakoniec spôsobí veľa požiadaviek s veľkým využitím šírky pásma. V závislosti od vášho internetového pripojenia a pripojenia uzlov a počtu transakcií môže táto akcia nejaký čas trvať. Po načítaní sa transakcie uložia do lokálnej vyrovnávacej pamäte. Naozaj chcete načítať všetky transakcie? (Limit načítania je obmedzený na 10 000 transakcií)",
+  "manage_accounts": "Spravovať účty",
+  "recipient_public_key": "Verejný kľúč príjemcu",
+  "recipient_public_key_invalid": "Adresa/Id príjemcu sa nezhoduje s daným verejným kľúčom",
+  "recipient_public_key_valid": "Adresa/Id príjemcu a verejný kľúč sa zhodujú",
+  "recipient_validation_hint_burn": "Množstvo bude spálené",
+  "recipient_validation_hint_invalid": "Pred odoslaním overte adresu príjemcu.",
+  "recipient_validation_hint_not_verified": "Adresa nebola overená.",
+  "recipient_validation_hint_unstoppable_out": "Nedá sa načítať z rozhrania Unstoppable Domains API. Skúste neskôr prosím.",
+  "recipient_validation_hint_verified": "Adresa bola úspešne overená.",
+  "enter_recipient_public_key": "Zadajte verejný kľúč príjemcu.",
+  "enter_recipient_public_key_hint": "Účet príjemcu nie je bezpečný, takže prevod bez verejného kľúča príjemcu nie je povolený.",
+  "confirm": "Potvrďte",
+  "select_account": "Vyberte"
 }
