--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -381,7 +381,6 @@
   "vote": "Oy",
   "vote_casting": "Oy Verme",
   "warning": "Uyarı",
-  "watch_burst_account": "Hesabı Gözlemle",
   "wrong_pin": "Yanlış PIN",
   "yes": "Evet",
   "you": "Sen",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Hesap(lar) başarıyla kaldırıldı",
   "no_public_key_title": "Uyarı! - Bu hesabın ortak anahtarı yok!",
   "not_registered_title": "Bu hesap blok zincirinde kayıtlı değil",
-  "not_registered_warning": "Bu hesapta henüz işlem yok. Bu hesabı göndermek ve/veya almak için kullanmayı düşünüyorsanız, bu hesabı şimdi etkinleştirmeniz önerilir."
+  "not_registered_warning": "Bu hesapta henüz işlem yok. Bu hesabı göndermek ve/veya almak için kullanmayı düşünüyorsanız, bu hesabı şimdi etkinleştirmeniz önerilir.",
+  "load_all_transactions": "Hepsini yükle",
+  "load_all_transactions_hint": "Tüm işlemlerin yüklenmesi, sonunda yüksek bant genişliği kullanımıyla çok sayıda talebe neden olur. Sizinkine ve düğümlerin internet bağlantısına ve işlem sayısına bağlı olarak bu işlem biraz zaman alabilir. Alındıktan sonra, işlemler yerel olarak önbelleğe alınır. Tüm işlemleri gerçekten yüklemek istiyor musunuz? (Getirme sınırı 10K işlemle sınırlıdır)",
+  "manage_accounts": "Hesapları yönet",
+  "recipient_public_key": "Alıcı Açık Anahtarı",
+  "recipient_public_key_invalid": "Alıcı Adresi/Kimliği verilen ortak anahtarla eşleşmiyor",
+  "recipient_public_key_valid": "Alıcı Adresi/Kimliği ve ortak anahtar eşleşmesi",
+  "recipient_validation_hint_burn": "Miktar yakılacak",
+  "recipient_validation_hint_invalid": "Lütfen göndermeden önce alıcının adresini doğrulayın.",
+  "recipient_validation_hint_not_verified": "Adres doğrulanmadı.",
+  "recipient_validation_hint_unstoppable_out": "Durdurulamaz Etki Alanları API'sinden getirilemiyor. Lütfen daha sonra tekrar deneyiniz.",
+  "recipient_validation_hint_verified": "Adres başarıyla doğrulandı.",
+  "enter_recipient_public_key": "Alıcının genel anahtarını girin.",
+  "enter_recipient_public_key_hint": "Alıcının hesabı güvenli değil, bu nedenle alıcının ortak anahtarı olmadan aktarıma izin verilmiyor.",
+  "confirm": "Teyit etmek",
+  "select_account": "Seçme"
 }
