--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -381,7 +381,6 @@
   "vote": "Голосувати",
   "vote_casting": "Кастинг голосів",
   "warning": "Увага",
-  "watch_burst_account": "Спостерігайте за рахунком",
   "wrong_pin": "Неправильний PIN-код",
   "yes": "Так",
   "you": "ти",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Обліковий запис(и) успішно видалено",
   "no_public_key_title": "УВАГА! - Цей обліковий запис не володіє відкритим ключем!",
   "not_registered_title": "Цей обліковий запис не зареєстровано в блокчейні",
-  "not_registered_warning": "Цей рахунок ще не має транзакцій. Якщо ви збираєтеся використовувати цей обліковий запис для надсилання та/або отримання, рекомендуємо активувати цей обліковий запис зараз."
+  "not_registered_warning": "Цей рахунок ще не має транзакцій. Якщо ви збираєтеся використовувати цей обліковий запис для надсилання та/або отримання, рекомендуємо активувати цей обліковий запис зараз.",
+  "load_all_transactions": "Завантажити все",
+  "load_all_transactions_hint": "Завантаження всіх транзакцій зрештою викликає багато запитів із високим використанням пропускної здатності. Залежно від вашого підключення до Інтернету та підключення вузлів і кількості транзакцій ця дія може зайняти деякий час. Після отримання транзакції кешуються локально. Ви дійсно хочете завантажити всі транзакції? (Ліміт отримання обмежено 10 тисячами транзакцій)",
+  "manage_accounts": "Керування обліковими записами",
+  "recipient_public_key": "Відкритий ключ одержувача",
+  "recipient_public_key_invalid": "Адреса/ідентифікатор одержувача не відповідає заданому відкритому ключу",
+  "recipient_public_key_valid": "Адреса/ідентифікатор одержувача та відкритий ключ збігаються",
+  "recipient_validation_hint_burn": "Сума буде спалена",
+  "recipient_validation_hint_invalid": "Перед надсиланням перевірте адресу одержувача.",
+  "recipient_validation_hint_not_verified": "Адреса не підтверджена.",
+  "recipient_validation_hint_unstoppable_out": "Неможливо отримати з Unstoppable Domains API. Будь-ласка спробуйте пізніше.",
+  "recipient_validation_hint_verified": "Адресу успішно перевірено.",
+  "enter_recipient_public_key": "Введіть відкритий ключ одержувача.",
+  "enter_recipient_public_key_hint": "Обліковий запис одержувача є небезпечним, тому передача без відкритого ключа одержувача не допускається.",
+  "confirm": "Підтвердити",
+  "select_account": "Виберіть"
 }
