--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -381,7 +381,6 @@
   "vote": "投票",
   "vote_casting": "投票",
   "warning": "警告",
-  "watch_burst_account": "观察帐户",
   "wrong_pin": "密码错误",
   "yes": "是的",
   "you": "你",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "帐户已成功删除",
   "no_public_key_title": "警告！ - 此帐户没有公钥！",
   "not_registered_title": "该账户未在区块链中注册",
-  "not_registered_warning": "该帐户还没有任何交易。如果您打算使用此帐户发送和/或接收，建议立即激活此帐户。"
+  "not_registered_warning": "该帐户还没有任何交易。如果您打算使用此帐户发送和/或接收，建议立即激活此帐户。",
+  "load_all_transactions": "全部加载",
+  "load_all_transactions_hint": "加载所有事务最终会导致大量请求占用大量带宽。根据您和节点的互联网连接以及交易数量，此操作可能需要一些时间。一旦获取，交易就被缓存在本地。您真的要加载所有交易吗？ （获取限制上限为 10K 笔交易）",
+  "manage_accounts": "管理帐户",
+  "recipient_public_key": "收件人公钥",
+  "recipient_public_key_invalid": "收件人地址/ID 与给定的公钥不匹配",
+  "recipient_public_key_valid": "收件人地址/ID 和公钥匹配",
+  "recipient_validation_hint_burn": "金额将被烧毁",
+  "recipient_validation_hint_invalid": "请在发送前验证收件人地址。",
+  "recipient_validation_hint_not_verified": "地址尚未验证。",
+  "recipient_validation_hint_unstoppable_out": "无法从 Unstoppable Domains API 获取。请稍后再试。",
+  "recipient_validation_hint_verified": "地址已成功验证。",
+  "enter_recipient_public_key": "输入收件人的公钥。",
+  "enter_recipient_public_key_hint": "收款人的账户是不安全的，所以没有收款人公钥的转账是不允许的。",
+  "confirm": "确认",
+  "select_account": "选择"
 }
