--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -381,7 +381,6 @@
   "vote": "Vota",
   "vote_casting": "Repartiment de vots",
   "warning": "Advertiment",
-  "watch_burst_account": "Observeu el compte",
   "wrong_pin": "PIN incorrecte",
   "yes": "Sí",
   "you": "Vostè",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Els comptes s'han eliminat correctament",
   "no_public_key_title": "Avís! - Aquest compte no posseeix una clau pública!",
   "not_registered_title": "Aquest compte no està registrat a la cadena de blocs",
-  "not_registered_warning": "Aquest compte encara no té transaccions. Si teniu intenció d'utilitzar aquest compte per enviar i/o rebre, us recomanem que l'activeu ara."
+  "not_registered_warning": "Aquest compte encara no té transaccions. Si teniu intenció d'utilitzar aquest compte per enviar i/o rebre, us recomanem que l'activeu ara.",
+  "load_all_transactions": "Carregueu-ho tot",
+  "load_all_transactions_hint": "La càrrega de totes les transaccions acaba provocant moltes sol·licituds amb un ús elevat d'ample de banda. Depenent de la vostra connexió a Internet i dels nodes i del nombre de transaccions, aquesta acció pot trigar un temps. Un cop obtingudes, les transaccions s'emmagatzemen a la memòria cau localment. Realment voleu carregar totes les transaccions? (El límit d'obtenció té un límit de 10.000 transaccions)",
+  "manage_accounts": "Gestionar comptes",
+  "recipient_public_key": "Clau pública del destinatari",
+  "recipient_public_key_invalid": "L'adreça/l'identificador del destinatari no coincideix amb la clau pública donada",
+  "recipient_public_key_valid": "L'adreça/identificador del destinatari i la clau pública coincideixen",
+  "recipient_validation_hint_burn": "La quantitat serà cremada",
+  "recipient_validation_hint_invalid": "Si us plau, verifiqueu l'adreça dels destinataris abans d'enviar.",
+  "recipient_validation_hint_not_verified": "L'adreça no s'ha verificat.",
+  "recipient_validation_hint_unstoppable_out": "No es pot obtenir des de l'API Unstoppable Domains. Siusplau, intenta-ho més tard.",
+  "recipient_validation_hint_verified": "L'adreça s'ha verificat correctament.",
+  "enter_recipient_public_key": "Introduïu la clau pública del destinatari.",
+  "enter_recipient_public_key_hint": "El compte del destinatari no és segur, de manera que no es permet una transferència sense la clau pública del destinatari.",
+  "confirm": "Confirmeu",
+  "select_account": "Seleccioneu"
 }
