--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -381,7 +381,6 @@
   "vote": "Vota",
   "vote_casting": "Reparto de votos",
   "warning": "Aviso",
-  "watch_burst_account": "Observe a conta",
   "wrong_pin": "PIN incorrecto",
   "yes": "Si",
   "you": "Ti",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Elimináronse as contas correctamente",
   "no_public_key_title": "Aviso! - Esta conta non posúe unha chave pública!",
   "not_registered_title": "Esta conta non está rexistrada na cadea de bloques",
-  "not_registered_warning": "Esta conta aínda non ten transaccións. Se queres usar esta conta para enviar e/ou recibir, recoméndase activala agora."
+  "not_registered_warning": "Esta conta aínda non ten transaccións. Se queres usar esta conta para enviar e/ou recibir, recoméndase activala agora.",
+  "load_all_transactions": "Cargar todo",
+  "load_all_transactions_hint": "A carga de todas as transaccións eventualmente provoca moitas solicitudes cun uso elevado de ancho de banda. Dependendo da túa conexión a Internet e dos nodos e do número de transaccións, esta acción pode levar algún tempo. Unha vez recuperadas, as transaccións almacénanse na caché local. Realmente queres cargar todas as transaccións? (O límite de obtención está limitado a 10 000 transaccións)",
+  "manage_accounts": "Xestionar Contas",
+  "recipient_public_key": "Chave pública do destinatario",
+  "recipient_public_key_invalid": "O enderezo/ID do destinatario non coincide coa chave pública dada",
+  "recipient_public_key_valid": "Enderezo/Identificación do destinatario e coincidencia de chave pública",
+  "recipient_validation_hint_burn": "A cantidade será queimada",
+  "recipient_validation_hint_invalid": "Verifique o enderezo dos destinatarios antes de enviar.",
+  "recipient_validation_hint_not_verified": "Non se verificou o enderezo.",
+  "recipient_validation_hint_unstoppable_out": "Non se puido obter a API de dominios imparables. Por favor inténtao de novo máis tarde.",
+  "recipient_validation_hint_verified": "Verificouse correctamente o enderezo.",
+  "enter_recipient_public_key": "Introduza a clave pública do destinatario.",
+  "enter_recipient_public_key_hint": "A conta do destinatario non é segura, polo que non se permite unha transferencia sen a chave pública do destinatario.",
+  "confirm": "Confirmar",
+  "select_account": "Seleccione"
 }
