--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -381,7 +381,6 @@
   "vote": "Głosować",
   "vote_casting": "Głosowanie",
   "warning": "Ostrzeżenie",
-  "watch_burst_account": "Obserwuj konto",
   "wrong_pin": "Błędny kod PIN",
   "yes": "tak",
   "you": "ty",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Konta zostały pomyślnie usunięte",
   "no_public_key_title": "Ostrzeżenie! - To konto nie posiada klucza publicznego!",
   "not_registered_title": "To konto nie jest zarejestrowane w łańcuchu bloków",
-  "not_registered_warning": "Na tym koncie nie ma jeszcze żadnych transakcji. Jeśli zamierzasz używać tego konta do wysyłania i/lub odbierania, zalecamy aktywację tego konta teraz."
+  "not_registered_warning": "Na tym koncie nie ma jeszcze żadnych transakcji. Jeśli zamierzasz używać tego konta do wysyłania i/lub odbierania, zalecamy aktywację tego konta teraz.",
+  "load_all_transactions": "Załaduj wszystko",
+  "load_all_transactions_hint": "Załadowanie wszystkich transakcji ostatecznie powoduje wiele żądań z dużym wykorzystaniem przepustowości. W zależności od połączenia internetowego twojego i węzłów oraz liczby transakcji ta czynność może zająć trochę czasu. Po pobraniu transakcje są buforowane lokalnie. Czy na pewno chcesz załadować wszystkie transakcje? (Limit pobierania jest ograniczony do 10 000 transakcji)",
+  "manage_accounts": "Zarządzaj kontami",
+  "recipient_public_key": "Klucz publiczny odbiorcy",
+  "recipient_public_key_invalid": "Adres/identyfikator odbiorcy nie pasuje do podanego klucza publicznego",
+  "recipient_public_key_valid": "Adres/identyfikator odbiorcy i klucz publiczny są zgodne",
+  "recipient_validation_hint_burn": "Kwota zostanie spalona",
+  "recipient_validation_hint_invalid": "Przed wysłaniem sprawdź adres odbiorcy.",
+  "recipient_validation_hint_not_verified": "Adres nie został zweryfikowany.",
+  "recipient_validation_hint_unstoppable_out": "Nie można pobrać z interfejsu Unstoppable Domains API. Spróbuj ponownie później.",
+  "recipient_validation_hint_verified": "Adres został pomyślnie zweryfikowany.",
+  "enter_recipient_public_key": "Wprowadź klucz publiczny odbiorcy.",
+  "enter_recipient_public_key_hint": "Konto odbiorcy jest niebezpieczne, więc transfer bez klucza publicznego odbiorcy jest niedozwolony.",
+  "confirm": "Potwierdzać",
+  "select_account": "Wybierać"
 }
