--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -381,7 +381,6 @@
   "vote": "Гласајте",
   "vote_casting": "Гласање",
   "warning": "Упозорење",
-  "watch_burst_account": "Посматрајте рачун",
   "wrong_pin": "Погрешан ПИН",
   "yes": "да",
   "you": "ти",
@@ -531,5 +530,20 @@
   "account_successfully_deleted": "Налози су успешно уклоњени",
   "no_public_key_title": "Упозорење! - Овај налог не поседује јавни кључ!",
   "not_registered_title": "Овај налог није регистрован у блоцкцхаин-у",
-  "not_registered_warning": "Овај налог још увек нема трансакција. Ако намеравате да користите овај налог за слање и/или примање, препоручује се да одмах активирате овај налог."
+  "not_registered_warning": "Овај налог још увек нема трансакција. Ако намеравате да користите овај налог за слање и/или примање, препоручује се да одмах активирате овај налог.",
+  "load_all_transactions": "Учитај све",
+  "load_all_transactions_hint": "Учитавање свих трансакција на крају изазива много захтева са великом употребом пропусног опсега. У зависности од ваше и интернет везе чворова и броја трансакција, ова радња може потрајати. Једном преузете, трансакције се локално кеширају. Да ли заиста желите да учитате све трансакције? (Ограничење преузимања је ограничено на 10.000 трансакција)",
+  "manage_accounts": "Управљајте налозима",
+  "recipient_public_key": "Јавни кључ примаоца",
+  "recipient_public_key_invalid": "Адреса/ИД примаоца се не подударају са датим јавним кључем",
+  "recipient_public_key_valid": "Адреса/ИД примаоца и јавни кључ се подударају",
+  "recipient_validation_hint_burn": "Износ ће бити спаљен",
+  "recipient_validation_hint_invalid": "Проверите адресу примаоца пре слања.",
+  "recipient_validation_hint_not_verified": "Адреса није верификована.",
+  "recipient_validation_hint_unstoppable_out": "Није могуће преузети са АПИ-ја Унстоппабле Домаинс. Покушајте поново касније.",
+  "recipient_validation_hint_verified": "Адреса је успешно верификована.",
+  "enter_recipient_public_key": "Унесите јавни кључ примаоца.",
+  "enter_recipient_public_key_hint": "Налог примаоца није безбедан, па пренос без јавног кључа примаоца није дозвољен.",
+  "confirm": "Потврди",
+  "select_account": "Изаберите"
 }
